--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,4 +12,5 @@ target 'GearKit_Tests', :exclusive => true do
   pod 'Nimble', '3.0.0'
   pod 'FBSnapshotTestCase'
   pod 'Nimble-Snapshots'
+  pod 'SwiftyJSON', '> 2'
 end
