--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,8 +8,8 @@ end
 target 'GearKit_Tests', :exclusive => true do
   pod 'GearKit', :path => '../'
 
-  pod 'Quick', '~> 0.8.0'
-  pod 'Nimble', '3.0.0'
+  pod 'Quick', '~> 0.9.0’
+  pod 'Nimble', ‘3.1.0’
   pod 'FBSnapshotTestCase'
   pod 'Nimble-Snapshots'
   pod 'SwiftyJSON', '> 2'
