--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ xcode_sdk: iphonesimulator9.3
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
+
+# NOTE: we allow warnings because we want to be able to pass validation even 
+# when third-party pods like SwiftyJSON generate warnings with newer XCode versions.
 script:
 - set -o pipefail && xcodebuild test -workspace Example/GearKit.xcworkspace -scheme GearKit-Example -sdk iphonesimulator9.3 -destination 'platform=iOS Simulator,name=iPhone 6s Plus,OS=9.3' ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- pod lib lint --allow-warnings
